2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui/ViewCommandHandlers.cs: Fix windows
	  build.

2009-08-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.FindInFiles/FindInFilesDialog.cs: Formatted
	  output correctly.

2009-08-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.FindInFiles/Scope.cs:
	* MonoDevelop.Ide.FindInFiles/FindReplace.cs:
	* MonoDevelop.Ide.FindInFiles/FindInFilesDialog.cs:
	* MonoDevelop.Ide.FindInFiles/SearchResultWidget.cs: Fixed
	  "Bug 523423 - Find dialog doesn't show its searching".

2009-08-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/ViewCommandHandlers.cs: Changed the
	  remove trailing whitespace algorihtm to use the
	  Mono.TextEditor data structures - they're not suffering from
	  extensive caret movement.

	* MonoDevelop.Ide.Gui/DefaultWorkbench.cs: Removed unused
	  event listener.

2009-08-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.addin.xml:
	* MonoDevelop.Ide.Commands/EditCommands.cs:
	* MonoDevelop.Ide.Gui/ViewCommandHandlers.cs: Added remove
	  trailing whitespace command from David Makovský
	  <yakeen@sannyas-on.net> & did some optimizations.

2009-08-24  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Commands/ToolsCommands.cs: Document.Save can
	  only be called from the gui thread.

	* MonoDevelop.Ide.Gui/ProjectOperations.cs: Before building,
	  don't autosave files which don't belong to a project. Fixes
	  bug #498686 - Compiling a solution/project with a file that
	  doesn't belong to any project MD ask for write the file.

2009-08-24  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui.Content/CompletionTextEditorExtension.cs:
	  Track api changes.

2009-08-24  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui/RootWorkspace.cs: Properly reset the
	  project of a document when reloading.

2009-08-24  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.Ide.csproj: